--- a/app/views/recipe/index.html.erb
+++ b/app/views/recipe/index.html.erb
@@ -1,1 +1,8 @@
-<h1>Magic Recipe</h1>
+<div class="container landing-content-area">
+	<h1 class="landing-heding">MAGIC-RECIPE</h1>
+	<h5> PROJECT BY SHARMILA</h5>
+</div>
+<div class="input-group search-margin">
+    <input type="text" id="menu_search" class="form-control" placeholder="Search here .." style="width:220px; padding:17px 53px">
+      
+    </div>
